--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,20 @@
   text-align: center;
   padding: 20px;
 }
+
+Button{
+  margin-right: 5px;
+}
+
+.profile{
+  margin-top: 20px;
+}
+
+.searchBox{
+  margin-top: 8px;
+}
+
+.noUser{
+  text-align: center;
+  margin-top: 10%;
+}
